# Creascent-Development

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.yml  ecosystem.config.cjs  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml  deploy.yml
apps/api/: package.json  vitest.config.ts
apps/deploykit/: .gitignore  README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/deploykit/src-tauri/: Cargo.toml  tauri.conf.json
apps/deploykit/src-tauri/src/: main.rs
apps/inboxos/: package.json  tailwind.config.ts
apps/licensekit/: package.json
apps/workers/: package.json  vitest.config.ts
designs/: unified-inbox.html
docs/: DEPLOY-VPS.md  RUNBOOK.md
e2e/: auth.spec.ts  bot-reply.spec.ts  inbox.spec.ts
tools/: .env.tools.example  .gitignore  Create-DocmeeDevToolsShortcut.ps1  Launch Docmee DevTools.vbs  Start-DocmeeDevTools.ps1  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
tools/app/: package.json
tools/app/src-tauri/: Cargo.toml  tauri.conf.json
tools/app/src-tauri/src/: main.rs
tools/dashboard/: .env.local.example  eslint.config.js  middleware.ts  next.config.js  package.json  tailwind.config.ts
tools/deploy/: Caddyfile.template  ecosystem.config.cjs
tools/discord/: package.json
tools/docs/: devtools-tailscale-access.md
tools/eslint/: package.json
tools/hooks/: post-migrate  pre-commit
tools/payloads/: booking-request.json  cancel-request.json  (+7 more)
(+534 files in other folders)
