[package]
name = "docmee-devtools"
version = "0.1.0"
description = "Docmee DevTools"
authors = ["Docmee"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "shell-execute", "system-tray", "notification-all"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
